--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
-    "src"
+    "src",
+    "preview.jpeg"
   ],
   "engines": {
     "node": ">=10"
